<resources>
    <string name="app_name">SmartWardrobe</string>
    <string name="add_your_garment"><b>Add your Garment</b></string>
    <string name="take_picture">Take picture</string>
    <string name="category"><b>Category : </b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_smart_wardrobe"><b>Welcome to Smart Wardrobe</b></string>
    <string name="the_app_that_chooses_your_outfit_for_you">The App that Chooses your Outfit for You</string>
    <string name="warmth"><b>Warmth :</b></string>
    <string name="comfort"><b>Comfort :</b></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loose"><b>Loose :</b></string>
    <string name="fancy"><b>Fancy :</b></string>
    <string name="color"><b>Color :</b></string>
    <string name="add_this_garment">Add This Garment to My Closet</string>
    <string name="color_of_your_item">color of your item</string>
    <string name="today_i_want_my_outfit_to_be"><b>Today I want my outfit to be :</b></string>
    <string name="my_choices">My Choices</string>
    <string name="generate_my_outfit">Generate my Outfit</string>
    <string name="here_is_my_today_s_outfit"><b>Here is My today\'s Outfit</b></string>
    <string name="my_closet"><b>My Closet</b></string>
    <string name="my_clothes_i_added_to_my_closet">My Clothes I added to my Closet</string>
    <string name="add_clothes_to_my_closet">Add clothes to my closet</string>
    <string name="what_s_in_my_closet">what\'s in my closet</string>
    <string name="outfits_chosen">Outfits Chosen</string>
    <string name="i_want_to_chose_my_outfit">I want To Chose My Outfit</string>
    <string name="previous_outfits_chosen"><b>Previous Outfits Chosen</b></string>
    <string name="here_is_a_list_of_my_outfits">Here is a List of My outfits</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="colors">Color</string>
    <string name="are_you_sure_you_want_to_delete_this_item">Are you sure you want to delete this item?</string>
    <string name="yess">Yes</string>
    <string name="noo">No</string>

</resources>