<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mannequin1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Welcome">

    <TextView
        android:id="@+id/welcometosmartwardrob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_smart_wardrobe"
        android:textColor="@color/pink"
        android:textSize="29sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <TextView
        android:id="@+id/appdescriptiontitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_app_that_chooses_your_outfit_for_you"
        android:textColor="@color/pink"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcometosmartwardrob"
        app:layout_constraintVertical_bias="0.012" />

    <Button
        android:id="@+id/addclothestomycloset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:alpha="0.8"
        android:background="@drawable/button"
        android:padding="20dp"
        android:text="@string/add_clothes_to_my_closet"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appdescriptiontitle"
        app:layout_constraintVertical_bias="0.124" />

    <Button
        android:id="@+id/whatsinmycloset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:alpha="0.8"
        android:background="@drawable/button"
        android:padding="20dp"
        android:text="@string/what_s_in_my_closet"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addclothestomycloset"
        app:layout_constraintVertical_bias="0.141" />

    <Button
        android:id="@+id/outfitchosenforme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:alpha="0.8"
        android:background="@drawable/button"
        android:padding="20dp"
        android:text="@string/outfits_chosen"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/welcometosmartwardrob"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whatsinmycloset"
        app:layout_constraintVertical_bias="0.225" />

    <Button
        android:id="@+id/chosemyoutfit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:alpha="0.8"
        android:background="@drawable/button"
        android:text="@string/i_want_to_chose_my_outfit"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/outfitchosenforme"
        app:layout_constraintVertical_bias="0.835" />
</androidx.constraintlayout.widget.ConstraintLayout>