<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.001">

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/are_you_sure_you_want_to_delete_this_item"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/pink"/>

        <Button
            android:id="@+id/button_yes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yess"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/button_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/noo"
            android:background="@drawable/button"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>