<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mannequin1"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AddGarment">

    <TextView
        android:id="@+id/addyourgarment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_your_garment"
        android:textColor="@color/pink"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.022" />

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:alpha="0.8"
        android:background="@drawable/roundedcorner"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addyourgarment"
        app:layout_constraintVertical_bias="0.057">

        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@color/purple"
            android:contentDescription="@string/add_your_garment"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_photo_camera_24"
            app:tint="@color/turquoise" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:gravity="bottom"
            android:text="@string/upload_your_image_here"
            android:textColor="@color/turquoise"
            android:textSize="14sp" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layoutcategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/framelayout"
        app:layout_constraintVertical_bias="0.022">

        <TextView
            android:id="@+id/category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/category"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnercategory"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="6"
            android:backgroundTint="@color/peach"
            android:gravity="center"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutwarmth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutcategory"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/warmth"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerwarmth"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="6"
            android:backgroundTint="@color/peach"
            android:gravity="center"
            android:spinnerMode="dialog" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutcomfort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutwarmth"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/comfort"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/layoutcomfortradio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="start"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry">

            <RadioButton
                android:id="@+id/yescomfort"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/peach"
                android:text="@string/yes"
                android:textColor="@color/peach"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/nocomfort"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/peach"
                android:text="@string/no"
                android:textColor="@color/peach"
                android:textSize="20sp" />
        </RadioGroup>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutloose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutcomfort"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/loose"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/layoutlooseradio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="start"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry">

            <RadioButton
                android:id="@+id/yesloose"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/peach"
                android:text="@string/yes"
                android:textColor="@color/peach"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/noloose"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/peach"
                android:text="@string/no"
                android:textColor="@color/peach"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutfancy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutloose"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:text="@string/fancy"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/layoutfancyradio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:gravity="start"
            android:orientation="horizontal"
            android:paddingStart="20dp"
            tools:ignore="RtlSymmetry">

            <RadioButton
                android:id="@+id/yesfancy"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="50dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/peach"
                android:text="@string/yes"
                android:textColor="@color/peach" />

            <RadioButton
                android:id="@+id/nofancy"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="50dp"
                android:layout_marginEnd="40dp"
                android:buttonTint="@color/peach"
                android:text="@string/no"
                android:textColor="@color/peach" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutcolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.157"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutfancy"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/color"
            android:textColor="@color/purple"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editcolor"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:textSize="20sp"
            android:layout_marginEnd="94dp"
            android:layout_weight="2"
            android:backgroundTint="@color/peach"
            android:gravity="center"
            android:hint="@string/color_of_your_item"
            android:spinnerMode="dialog"
            android:textColorHint="@color/peach" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonaddgarment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/button"
        android:padding="20dp"
        android:alpha="0.8"
        android:text="@string/add_this_garment"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutcolor"
        app:layout_constraintVertical_bias="0.682" />


</androidx.constraintlayout.widget.ConstraintLayout>